tests/reference/asr-test_unsupported_type-0d813dd.stderr
semantic error: The type 'i128' is undeclared.
 --> tests/errors/test_unsupported_type.py:2:8
  |
2 |     i: i128
  |        ^^^^ 
